<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_get_ticket"
            android:icon="@drawable/ic_book_online"
            android:title="@string/menu_get_ticket" />
        <item
            android:id="@+id/nav_typing_game"
            android:icon="@drawable/ic_keyboard"
            android:title="@string/menu_typing_game" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_timeline"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_youtube"
            android:title="@string/menu_youtube" />

    </group>
</menu>