<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ham.onettsix.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ham.onettsix.fragment.MyProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_get_ticket"
        android:name="com.ham.onettsix.fragment.GameFragment"
        android:label="@string/menu_get_ticket"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.ham.onettsix.fragment.LotteryHistoryFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" />


</navigation>