<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".SignUpActivity">

    <com.ham.onettsix.view.ToolbarView
        android:id="@+id/signup_toolbar_back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbar_title="@string/sign_up" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sign_up_profile_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_manage_accounts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_toolbar_back" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_up_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:hint="@string/nickname_hint"
        android:textColor="@color/text_black"
        android:textSize="20dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_profile_img" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_bank_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/bank_name"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_bank"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/sign_up_bank" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_up_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/bank_name_hint"
        android:textColor="@color/text_black"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@id/sign_up_bank_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_nickname" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_account_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/account_number"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_account_number"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/sign_up_account_number" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_up_account_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/account_number_hint"
        android:textColor="@color/text_black"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@id/sign_up_account_number_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_bank" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_account_holder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/account_holder"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_account_holder"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/sign_up_account_holder" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_up_account_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/account_holder_hint"
        android:textColor="@color/text_black"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@id/sign_up_account_holder_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_account_number" />


</androidx.constraintlayout.widget.ConstraintLayout>
