<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TypingGameInfoActivity">

    <com.ham.onettsix.view.ToolbarView
        android:id="@+id/typing_game_register_toolbar_back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:toolbar_title="@string/typing_game_register_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_gray_background"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/typing_game_register_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typing_game_attend_count"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@color/warning_icon_color"
            app:layout_constraintLeft_toRightOf="@+id/typing_game_register_description_title"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/typing_game_register_content_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/typing_game_register_edit_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typing_game_register_description_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_gray_background"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/typing_game_register_tag_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typing_game_register_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@color/warning_icon_color"
            app:layout_constraintLeft_toRightOf="@+id/typing_game_register_tag_title"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/typing_game_register_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/typing_game_register_description_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typing_game_register_tag_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/typing_game_register_keyword_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typing_game_register_tag"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@color/warning_icon_color"
            app:layout_constraintLeft_toRightOf="@+id/typing_game_register_keyword_title"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/typing_game_register_tag_rv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typing_game_register_keyword_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/typing_game_register_tag_btn"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/main_soft_color_btn_background"
        android:text="@string/typing_game_register_custom_tag"
        android:textColor="@color/text_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/typing_game_register_info"
        android:textColor="@color/text_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/typing_game_register_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/main_color_btn_background"
        android:text="@string/typing_game_register_confirm"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>
