<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rv_item_header_my_profile_history"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/my_profile_history_item_episode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/text_black"
            android:text="@string/profile_history_game_index_title"
            android:textSize="20dp"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/my_profile_history_item_join_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/text_black"
            android:text="@string/profile_history_game_join_info_title"
            android:textSize="14dp"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/my_profile_history_item_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/text_black"
            android:text="@string/profile_history_game_point"
            android:textSize="20dp"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/my_profile_history_item_status"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/text_black"
            android:text="@string/profile_history_game_result"
            android:textSize="20dp"
            android:gravity="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_profile_history_item_expire_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmarket_sans_ttf_bold"
        android:gravity="center"
        android:textColor="@color/main_color"
        android:textSize="14dp" />


</androidx.appcompat.widget.LinearLayoutCompat>